# worldstate_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  rustfmt.toml
assets/: archimedeaExt.json  crewBattleNodes.json
src/: handlers.rs  main.rs  worldstate.rs
