[package]
name = "worldstate_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"
worldstate_parser = { git = "https://github.com/Mettwasser/worldstate_parser.git" }
